CSS Errors and small fixes
Added images for missing people
added more responsive css 
adjusted spacing consistency
made text more legible for all sizes

--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
     <div id="contact"> 
         <div class="social">
             <div class="feature-big-title">Join our mission</div>
-            <a href=""><img src="assets/img/Facebook_Color.png"></a>
-            <a href=""><img src="assets/img/Twitter_Color.png"></a>
-            <a href=""><img src="assets/img/Medium_Color.png"></a>
-            <a href=""><img src="assets/img/Youtube%20Copy_Color.png"></a>
+            <a href="https://www.facebook.com/Deepseeio"><img src="assets/img/Facebook_Color.png"></a>
+            <a href="https://twitter.com/deepseeio?lang=en"><img src="assets/img/Twitter_Color.png"></a>
+            <a href="https://medium.com/@deepseeio"><img src="assets/img/Medium_Color.png"></a>
+            <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img src="assets/img/Youtube%20Copy_Color.png"></a>
         </div>
         <div class="investors">
             <div class="feature-big-title">For Investors</div>
