Signed-off-by: Kyle Diggs <Contact@KyleDiggs.com>

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                 <img src="assets/img/joel-comm.png">
                 <h3>Joel Comm</h3>
                 <h5>Chief Evangelist</h5>
+                <p>Joel Comm is a NY Times best-selling author, speaker, marketing strategist, technologist, futurist & @BadCrypto co-host</p>
             </div>
         </div>
     </div>
