Signed-off-by: Kyle Diggs <Contact@KyleDiggs.com>

--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
             <a href="https://www.facebook.com/Deepseeio"><img src="assets/img/Facebook_Color.png"></a>
             <a href="https://twitter.com/deepseeio?lang=en"><img src="assets/img/Twitter_Color.png"></a>
             <a href="https://medium.com/@deepseeio"><img src="assets/img/Medium_Color.png"></a>
-            <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img src="assets/img/Youtube%20Copy_Color.png"></a>
+            <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img src="assets/img/Youtube%20Copy_Color.png"></a>de
         </div>
         <div class="investors">
             <div class="feature-big-title">For Investors</div>
-            <a class="hollow-button" href="">INVESTORS</a>
-            <a class="hollow-button" href="">DECK</a>
+            <a class="hollow-button"  href="assets/pdf/whitepaper.pdf">INVESTORS</a>
+            <a class="hollow-button"  href="assets/pdf/deck.pdf">DECK</a>
         </div>
         <div class="newsletter">
             <div class="feature-big-title">Get Newsletter</div>
