--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <a href="https://www.facebook.com/Deepseeio"><img src="assets/img/Facebook_Color.png"></a>
             <a href="https://twitter.com/deepseeio?lang=en"><img src="assets/img/Twitter_Color.png"></a>
             <a href="https://medium.com/@deepseeio"><img src="assets/img/Medium_Color.png"></a>
-            <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img src="assets/img/Youtube%20Copy_Color.png"></a>de
+            <a href="https://www.youtube.com/channel/UCfEP4kVI-ezfwDInPHk70vg"><img src="assets/img/Youtube%20Copy_Color.png"></a>
         </div>
         <div class="investors">
             <div class="feature-big-title">For Investors</div>
