--- a/index.html
+++ b/index.html
@@ -134,29 +134,29 @@
         <div id="features-container-row1">
             <div id="feature1"> <img class="icon-height" src="assets/img/feature1.svg" />
                 <div class="feature-titles"> Communities </div>
-                <div class="feature-info"> Whether you're looking to create, organize, communicate, contribute--it doesn't matter. There is a place for everyone to not only make a difference, but make a name and get rewarded. </div>
+                <div class="feature-info"> Similar to Reddit, Communities act as the backbone of the platform. Communities are user-generated and act as the nexus for content and discussions revolving around a certain event, place, topic, etc. Communities also pay moderators and users for their activity! </div>
             </div>
             <div id="feature2"> <img class="icon-height" src="assets/img/feature2.svg" />
                 <div class="feature-titles"> Videos </div>
-                <div class="feature-info"> CurrentSee is DeepSee's cryptocurrency, powered by block chain. It is the coin we are using to raise our ICO. A predetermined amount will be sold at the platform's ICO to power the development of the entire company. When CurrentSee is deposited on DeepSee, it becomes "Current." </div>
+                <div class="feature-info"> Creators can upload their own videos, easily monetize them, and leverage other areas of the platform to get viewers. </div>
             </div>
             <div id="feature3"> <img class="icon-height" src="assets/img/feature3.svg" />
                 <div class="feature-titles"> Articles & Blogs </div>
-                <div class="feature-info"> DeepSee's promotion platform is the primary driver behind CurrentSee. CurrentSee is used to purchase side panel ads, article advertisements and video advertisements. </div>
+                <div class="feature-info"> Similar to Medium.com, this area of DeepSee allows users to create professional articles, blogs, etc. The area also comes with advanced discovery options and the ability to monetize content. </div>
             </div>
         </div>
         <div id="features-container-row2">
             <div id="feature4"> <img class="icon-height" src="assets/img/feature4.svg" />
                 <div class="feature-titles"> Profiles </div>
-                <div class="feature-info"> Whether you're looking to create, organize, communicate, contribute--it doesn't matter. There is a place for everyone to not only make a difference, but make a name and get rewarded. </div>
+                <div class="feature-info"> Users have a multitude of options that enable them to choose their level of privacy. Industry professionals, leaders, celebrities and others looking to use DeepSee as a platform can opt to go through the verification process, which rewards tags [note: Is 'tags'  appropriate here?] based on verifiable skills/identity. </div>
             </div>
             <div id="feature5"> <img class="icon-height" src="assets/img/feature5.svg" />
                 <div class="feature-titles"> Shouts </div>
-                <div class="feature-info"> CurrentSee is DeepSee's cryptocurrency, powered by block chain. It is the coin we are using to raise our ICO. A predetermined amount will be sold at the platform's ICO to power the development of the entire company. When CurrentSee is deposited on DeepSee, it becomes "Current." </div>
+                <div class="feature-info"> Similar to Twitter, shouts act as a short (300 character) and informal means of communication on the platform. Users can upload pics, videos, follow friends or celebrities, or simply as a means of discovering trends and what's hot.  </div>
             </div>
             <div id="feature6"> <img class="icon-height" src="assets/img/feature6.svg" />
                 <div class="feature-titles"> Moderators </div>
-                <div class="feature-info"> DeepSee's promotion platform is the primary driver behind CurrentSee. CurrentSee is used to purchase side panel ads, article advertisements and video advertisements. </div>
+                <div class="feature-info"> DeepSee has an internal mod team in addition to community mod teams. Both platform and community mods are held to the highest standards, with public complaint boards, anti-tamper algorithms, and public block chain ledgers, in addition to many other security features. </div>
             </div>
         </div>
         <div id="features-container-row3">
