--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             </div>
             <div id="countdown-announcement"> UNTIL <span class="bold">CURRENTSEE</span> ICO </div>
             <div id="hero-text-wide"> 
-                <span class="no-wrap">DeepSee is a community-driven content authentication</span> <span class="no-wrap">and monetization platform powered by blockchain, AI,</span> <span class="no-wrap">and radical transparency.</span> 
+                <span>DeepSee is a community-driven content authentication</span> <span class="no-wrap">and monetization platform powered by blockchain, AI,</span> <span class="no-wrap">and radical transparency.</span> 
             </div>
             <div id="hero-text-thin"> 
-                <span class="no-wrap">DeepSee is a community-</span> <span class="no-wrap">driven content authentication</span> <span class="no-wrap">and monetization platform</span> <span class="no-wrap">powered by blockchain, AI,</span> <span class="no-wrap">and radical transparency.</span> 
+                <span>DeepSee is a community-</span> <span class="no-wrap">driven content authentication</span> <span class="no-wrap">and monetization platform</span> <span class="no-wrap">powered by blockchain, AI,</span> <span class="no-wrap">and radical transparency.</span> 
             </div>
             <a id="scroller-link" href="#explore-deepsee">
                 <img id="scroller-image" src="assets/img/scroll-arrow.svg" />
