--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="offer-infos"> DeepSee's promotion platform is the primary driver behind CurrentSee. CurrentSee is used to purchase side panel ads, article advertisements and video advertisements. </div>
             </div>
         </div>
-        <div id="offer-screenshot-container"> <img id="offer-screenshot" src="/assets/img/deepsee-screenshots.png" /> </div>
+        <div id="offer-screenshot-container" align="center"> <img id="offer-screenshot" src="/assets/img/deepsee-screenshots.png" /> </div>
     </div>
     <!-- features -->
     <div id="features">
