--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div id="signup" class="feature-new">
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
-            <div class="center-block" style="width:400px">
+            <div class="center-block signup-form">
                 <form>
                     <div class="input-group">
                         <input class="email" type="email"
@@ -308,7 +308,7 @@
     <div id="signup2" class="feature-new">
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
-            <div class="center-block" style="width:400px">
+            <div class="signup-form center-block">
                 <form>
                     <div class="input-group">
                         <input class="email" type="email"
