added more content to 'about' section, fixed issues with footer signup form

--- a/index.html
+++ b/index.html
@@ -119,25 +119,31 @@
         </div>
     </div>
 
-    <!-- explore deepsee -->
-    <div name="about" id="about">
-        <div class="text-center feature-title">What is DeepSee?</div> 
+    <!-- about -->
+    <div name="about" id="about" class="feature-new">
+
+        <div class="center-block text-center feature-title">What is DeepSee?</div> 
+        <br/>
+        <div class="center-block text-center default-text">
+            DeepSee is an all-in-one media platform that is revolutionizing content aggregation, distribution, verification, and monetization. DeepSee makes use of artificial intelligence, decentralized communities, and the blockchain to create the most powerful yet flexible platform of it's kind. The goal of DeepSee is the build a global village of the highest value and integrity.
+        </div>
 
         <div class="about-content"> 
 
             <div class="about-text-column">
 
                     <div class="about-text"><div class="about-text-header">Panel</div>
-                        The panel is the main feed of DeepSee that be attuned in many different ways including personalized. The panels connects the bigs sections of DeepSee into one place filled with a filtered feeds, recommendations, friend updates, leaderboards and much more. 
+                        The panel is your customizable "front page" of DeepSee. 
+                        It combines the major sections of DeepSee in one place, populated with filtered feeds, recommendations, friend updates, leaderboards, and more. 
                     </div>
                     <div class="about-text"><div class="about-text-header">Video</div>
-                        The platform is equipped with a powerful video hosting feature that allows creators a-like to upload their videos, podcasts, music and more. User can rate videos, inform themselves through filtered comments or even comment themselves! Deepsee devotes an entire section of the site for the search and discovering of new content within our video section. 
+                        The platform is equipped with a powerful video hosting feature that allows content creators to upload their videos, podcasts, music, and more. User can rate videos, leave comments, and read the feedback of others.
                     </div>
                     <div class="about-text"><div class="about-text-header">Text</div>
-                        DeepSee comes equipped with a Medium-esque hosting hub for articles, blogs, news, etc. Content creators can write pieces using our powerful text editor while users can rate, comment, share and even annotate. An entire section of the site is devoted to the discovery of written material. 
+                        DeepSee comes equipped with a Medium-esque hosting hub for articles, blogs, news, and more. Content creators can write pieces using our powerful text editor while users can rate, comment, share, and even annotate. 
                     </div>
                     <div class="about-text"><div class="about-text-header">Communities</div>
-                        DeepSee lays host to advanced user generated and verified communities that are similar to Reddit in some fashions. Communities allow users to keep up with the daily trending content, questions, links, discussions etc. Powerful filters, search features, tags, paid users/moderators, forums and A.I make our communities feeds are force to be reckoned with.  
+                        DeepSee lays host to advanced user generated and verified communities that are similar to Reddit. Communities allow users to keep up with the daily trending content, questions, links, and discussions. Through filters, search features, tags, paid users/moderators, forums, and A.I, our communities give tremendous power and flexibility to our users.
                     </div>
 
             </div>
@@ -145,24 +151,28 @@
             <div class="about-image-column">
 
                     <img class="about-image" src="assets/img/ds-screenshot.png" 
-                    alt="DeepSee Screenshot"/>
+                    alt="DeepSee Panel Screenshot"/>
 
+                    <img class="about-image" src="assets/img/deepsee_profile.png" 
+                    alt="DeepSee Profile Screenshot"/>
 
             </div>
 
             <div class="about-text-column">
 
                     <div class="about-text"><div class="about-text-header">Shouts</div>
-                        Quick, informal and virals forms of communication are important. DeepSee incorporates 300 character user updates than can contain text, links, videos, images, gif, etc. DeepSee also dedicates an area of the site and the user profile page to serve this function.
+                        Quick, informal, and viral forms of communication are important. DeepSee incorporates 300 character user updates than can contain text, links, pictures, and videos.
                     </div>
                     <div class="about-text"><div class="about-text-header">Networks</div>
                         Creators can establish a network for their text and video content, in addition to building a network that supports both. 
                     </div>
                     <div class="about-text"><div class="about-text-header">Verification</div>
-                        Users are allowed to create anonymous, personal and even verified accounts. Celebrities, influencers, professors, professionals and more can get verified under certain skills. Verification carries over into every area of the site from creators to the comments sections as a means of defining credibility.
+                        DeepSee supports various levels of verification, from DeepSee verified to anonymous.  In addition, certain professionals can have their professions verified, giving them greater credibility and "clout" in certain areas of the site, including content creation and
+                        commenting.
                     </div>
                     <div class="about-text"><div class="about-text-header">Ad Platform</div>
-                        DeepSee utilizes an advertisement platform that is tied directly to our token CurrentSee. The DeepSee team makes use of artificial intelligence, tags and profiles as a means of serving quality advertisements. Users can also opt for premium models that are void of advertisements. 
+                        DeepSee utilizes an advertisement platform that is tied directly to our token CurrentSee. The DeepSee team makes use of artificial intelligence, tags, and profiles as a means of serving quality advertisements. Users will have the option of removing these 
+                        advertisements through a premium subscription.
                     </div>
                             
 
@@ -177,10 +187,8 @@
         <div class="text-center feature-title"> What is CurrentSee? </div>
 
                 <div class="center-block default-text">
-            CurrentSee isn't just some junk coin.  It's a digital asset directly backed by services on the platform.  Advertising is a high demand/large volume service that, given the appropriate metrics,
-            can be traded much like a commodity.  The value of CurrentSee is directly tied to the size of the 
-            DeepSee community--thus ALL holders of CurrentSee have huge incentives to participate in the 
-            community and recruit others to the platform.
+            CurrentSee isn't just some junk coin.  It's a digital asset directly backed by services on the platform.  Advertising is a high demand/large volume service that, given the appropriate metrics, can be traded much like a commodity.  The value of CurrentSee is directly tied to the size of the 
+            DeepSee community--thus ALL holders of CurrentSee have huge incentives to participate in the community and recruit others to the platform.
         </div>
 
         <div>
@@ -188,12 +196,11 @@
         </div>
     </div>
 
-    <div id="timeline">
+   <!--  <div id="timeline">
         <div class="text-center feature-title"> Our TimeLine</div>
 
-        <!-- <img class="full-width-image" src="/assets/img/hero-image-sea.jpg"> -->
 
-    </div>
+    </div> -->
 
     <!-- team -->    
     <div id="team" name="team">
@@ -308,7 +315,7 @@
     <div id="signup2" class="feature-new">
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
-            <div class="signup-form center-block">
+            <div class="center-block signup-form">
                 <form>
                     <div class="input-group">
                         <input class="email" type="email"
