Added some of the PHP mailing code; added timeline sections; various CSS tweaks

--- a/index.html
+++ b/index.html
@@ -196,14 +196,16 @@
         </div>
     </div>
 
-   <!--  <div id="timeline">
+    <div id="timeline" name="timeline" class="feature-new">
         <div class="text-center feature-title"> Our TimeLine</div>
 
+        <div class="text-center"><img src="/assets/img/timeline.png" style="width:80%; margin-bottom:20px"/>
+        </div>
 
-    </div> -->
+    </div>
 
     <!-- team -->    
-    <div id="team" name="team">
+    <div id="team" name="team" class="feature-new">
         <div class="text-center feature-title">Our Team</div>
 
         <div class="persons">
@@ -251,7 +253,7 @@
                 <img src="assets/img/joel-comm.png">
                 <h3>Joel Comm</h3>
                 <h5>Chief Evangelist</h5>
-                <p>NY Times best-selling author, speaker, marketing strategist, technologist, futurist & @BadCrypto co-host</p>
+                <p>NY Times best-selling author, speaker, marketing strategist, technologist, futurist and @BadCrypto co-host</p>
             </div>
             <div class="person">
                 <img src="assets/img/adryenn-ashley.png">
@@ -291,7 +293,7 @@
     </div>
     <!-- contact -->
     <!-- <a id="scroller-link" href="#contact"/> -->
-    <div id="contact" class="feature-new"> 
+    <div id="contact" name="contact" class="feature-new"> 
         <div class="container">
         <div class="text-center feature-title">Contact Us</div>
         <form class="center-block">
