changed network text

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                         Quick, informal, and viral forms of communication are important. DeepSee incorporates 300 character user updates than can contain text, links, pictures, and videos.
                     </div>
                     <div class="about-text"><div class="about-text-header">Networks</div>
-                        Creators can establish a network for their text and video content, in addition to building a network that supports both. 
+                        Content creators can form networks to which they can publish their material.  Networks can recruit other users to do the same, where
+                        everyone can publish, annotate, and review content collectively.
                     </div>
                     <div class="about-text"><div class="about-text-header">Verification</div>
                         DeepSee supports various levels of verification, from DeepSee verified to anonymous.  In addition, certain professionals can have their professions verified, giving them greater credibility and "clout" in certain areas of the site, including content creation and
