replaced some images and added raised 'card' effects, more css tweaks

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
     </div>
 
-    <div id="signup" class="feature-new">
+    <div id="signup" class="feature">
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
             <div class="center-block signup-form">
@@ -120,7 +120,7 @@
     </div>
 
     <!-- about -->
-    <div name="about" id="about" class="feature-new">
+    <div name="about" id="about" class="feature">
 
         <div class="center-block text-center feature-title">What is DeepSee?</div> 
         <br/>
@@ -150,40 +150,41 @@
 
             <div class="about-image-column">
 
-                    <img class="about-image" src="assets/img/ds-screenshot.png" 
+                    <img class="card" src="assets/img/ds_panel.png" 
                     alt="DeepSee Panel Screenshot"/>
 
-                    <img class="about-image" src="assets/img/deepsee_profile.png" 
+                    <img class="card" src="assets/img/deepsee_profile.png" 
                     alt="DeepSee Profile Screenshot"/>
 
             </div>
 
             <div class="about-text-column">
 
-                    <div class="about-text"><div class="about-text-header">Shouts</div>
-                        Quick, informal, and viral forms of communication are important. DeepSee incorporates 300 character user updates than can contain text, links, pictures, and videos.
-                    </div>
-                    <div class="about-text"><div class="about-text-header">Networks</div>
-                        Content creators can form networks to which they can publish their material.  Networks can recruit other users to do the same, where
-                        everyone can publish, annotate, and review content collectively.
-                    </div>
-                    <div class="about-text"><div class="about-text-header">Verification</div>
-                        DeepSee supports various levels of verification, from DeepSee verified to anonymous.  In addition, certain professionals can have their professions verified, giving them greater credibility and "clout" in certain areas of the site, including content creation and
-                        commenting.
-                    </div>
-                    <div class="about-text"><div class="about-text-header">Ad Platform</div>
-                        DeepSee utilizes an advertisement platform that is tied directly to our token CurrentSee. The DeepSee team makes use of artificial intelligence, tags, and profiles as a means of serving quality advertisements. Users will have the option of removing these 
-                        advertisements through a premium subscription.
-                    </div>
-                            
-
+                <div class="about-text">
+                    <div class="about-text-header">Shouts</div>
+                    Quick, informal, and viral forms of communication are important. DeepSee incorporates 300 character user updates than can contain text, links, pictures, and videos.
+                </div>
+                <div class="about-text">
+                    <div class="about-text-header">Networks</div>
+                    Content creators can form networks to which they can publish their material.  Networks can recruit other users to do the same, where
+                    everyone can publish, annotate, and review content collectively.
+                </div>
+                <div class="about-text">
+                    <div class="about-text-header">Verification</div>
+                    DeepSee supports various levels of verification, from DeepSee verified to anonymous.  In addition, certain professionals can have their professions verified, giving them greater credibility and "clout" in certain areas of the site, including content creation and
+                    commenting.
+                </div>
+                <div class="about-text">
+                    <div class="about-text-header">Ad Platform</div>
+                    DeepSee utilizes an advertisement platform that is tied directly to our token CurrentSee. The DeepSee team makes use of artificial intelligence, tags, and profiles as a means of serving quality advertisements. Users will have the option of removing these 
+                    advertisements through a premium subscription.
+                </div>                            
             </div>
-
         </div>
     </div>
     
     <!-- currentsee -->
-    <div id="currentsee" class="feature-new">
+    <div id="currentsee" name="currentsee" class="feature">
 
         <div class="text-center feature-title"> What is CurrentSee? </div>
 
@@ -193,20 +194,19 @@
         </div>
 
         <div>
-            <img class="full-width-image" src="/assets/img/ds-infrastructure.png">
+            <img class="currentsee-img center-block" src="/assets/img/ds-infrastructure.png">
         </div>
     </div>
 
-    <div id="timeline" name="timeline" class="feature-new">
+    <div id="timeline" name="timeline" class="feature">
         <div class="text-center feature-title"> Our TimeLine</div>
 
-        <div class="text-center"><img src="/assets/img/timeline.png" style="width:80%; margin-bottom:20px"/>
-        </div>
+        <img class="timeline-img" src="/assets/img/timeline.png"/>
 
     </div>
 
     <!-- team -->    
-    <div id="team" name="team" class="feature-new">
+    <div id="team" name="team" class="feature">
         <div class="text-center feature-title">Our Team</div>
 
         <div class="persons">
@@ -294,7 +294,7 @@
     </div>
     <!-- contact -->
     <!-- <a id="scroller-link" href="#contact"/> -->
-    <div id="contact" name="contact" class="feature-new"> 
+    <div id="contact" name="contact" class="feature"> 
         <div class="container">
         <div class="text-center feature-title">Contact Us</div>
         <form class="center-block">
@@ -315,7 +315,7 @@
     </div>
     </div>
 
-    <div id="signup2" class="feature-new">
+    <div id="signup2" class="feature">
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
             <div class="center-block signup-form">
