removed top signup background; some mail changes (still broken)

--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
                 <img id="scroller-image" src="assets/img/scroll-arrow.svg" />
             </a> -->
         </div>
-    </div>
 
-    <div id="signup" class="feature">
+        <div id="signup" class="feature">
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
             <div class="center-block signup-form">
@@ -118,6 +117,25 @@
             </div>
         </div>
     </div>
+        
+    </div>
+
+    <!-- <div id="signup" class="feature">
+        <div class="container">
+            <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
+            <div class="center-block signup-form">
+                <form>
+                    <div class="input-group">
+                        <input class="email" type="email"
+                        placeholder="Enter Email" style="width:100%"/>
+                        <span class="input-group-btn">
+                        <button class="btn btn-primary">SIGN UP</button>
+                    </span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div> -->
 
     <!-- about -->
     <div name="about" id="about" class="feature">
