--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
             <div class="center-block signup-form">
-                <form method="post">
+                <form method="post" action="mail.php">
                     <div class="input-group">
                         <input name="email" class="email" type="email"
                         placeholder="Enter Email" style="width:100%"/>
@@ -310,12 +310,12 @@
             </div>
         </div>
     </div>
+
     <!-- contact -->
-    <!-- <a id="scroller-link" href="#contact"/> -->
     <div id="contact" name="contact" class="feature"> 
         <div class="container">
         <div class="text-center feature-title">Contact Us</div>
-        <form class="center-block" method="post">
+        <form class="center-block" method="post" action="mail.php">
             <div class="form-group">
                 <input name="name" type="text" placeholder="Enter Full Name"/>
             </div>
@@ -326,7 +326,7 @@
                 <textarea name="message" rows="4" placeholder="Your Message"></textarea>
             </div>
             <div class="form-group">
-                <button class="btn btn-success" type="button">SEND MESSAGE</button>
+                <button class="btn btn-success">SEND MESSAGE</button>
             </div>
         </form>
     <!-- </div> -->
@@ -337,7 +337,7 @@
         <div class="container">
             <div class="text-center feature-title">Sign up for our newsletter &amp; updates</div>
             <div class="center-block signup-form">
-                <form method="post">
+                <form method="post" action="mail.php">
                     <div class="input-group">
                         <input name="email" class="email" type="email"
                         placeholder="Enter Email" style="width:100%"/>
